--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "roughjs": "^4.5.2",
     "tailwindcss": "3.3.3"
   }
