--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "bufferutil": "^4.0.7",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
@@ -19,6 +20,9 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "roughjs": "^4.5.2",
-    "tailwindcss": "3.3.3"
+    "socket.io-client": "^4.7.2",
+    "supports-color": "^9.4.0",
+    "tailwindcss": "3.3.3",
+    "utf-8-validate": "^5.0.10"
   }
 }
