--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bufferutil": "^4.0.7",
     "nanoid": "^4.0.2",
     "next": "13.4.19",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-color": "^2.19.3",
