--- a/.github/workflows/main_inksynk.yml
+++ b/.github/workflows/main_inksynk.yml
@@ -30,7 +30,7 @@ jobs:
           npm run build --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: cd server && zip -r ../release.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
